--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
                         <li><a href="#">이메일문의</a>
                         </li>
                     </ul>
+                    <ul class="snscover">
+                        <li class="sns1"><a href="#"></a></li>
+                        <li class="sns2"><a href="#"></a></li>
+                        <li class="sns3"><a href="#"></a></li>
+                        <li class="sns4"><a href="#"></a></li>
+                    </ul>
                 </div>
             </div>
            <div class="hbot">
@@ -251,10 +257,92 @@
                 </div>
             </div>
             <div id="grmn">
-                
+                <div class="boxalign">
+                    <dl>
+                        <dt>브랜드 소개</dt>
+                        <dd>브랜드 소개</dd>
+                        <dd>브랜드 경쟁력</dd>
+                        <dd>브랜드 컨셉</dd>
+                        <dd>BI</dd>
+                        <dd>웹 브로셔</dd>
+                        <dd>회사소개</dd>
+                    </dl>
+                    <dl>
+                        <dt>메뉴</dt>
+                        <dd>핫도</dd>
+                        <dd>커피</dd>
+                        <dd>Beverage</dd>
+                        <dd>Side menu</dd>
+                    </dl>
+                    <dl>
+                        <dt>개설안내</dt>
+                        <dd>가맹문의</dd>
+                        <dd>개설절차</dd>
+                        <dd>개설비용</dd>
+                        <dd>창업FAQ</dd>
+                        <dd>인테리어</dd>
+                    </dl>
+                    <dl>
+                        <dt>매장정보</dt>
+                        <dd>매장찾기</dd>
+                        <dd>특수상권</dd>
+                    </dl>
+                    <dl>
+                        <dt>이벤트</dt>
+                        <dd>이벤트</dd>
+                    </dl>
+                    <dl>
+                        <dt>커뮤니티</dt>
+                        <dd>소셜 XOXO</dd>
+                        <dd>공지사항</dd>
+                        <dd>보도자료</dd>
+                        <dd>고객만족센터</dd>
+                    </dl>
+                </div>
             </div>
         </section>
-        <footer class="boxalign"></footer>
+        <footer>
+            <div class="boxalign">
+                <div class="ftop">
+                    <ul>
+                        <li>
+                        <a href="#">회사소개</a><span>/</span>
+                        </li>
+                        <li>
+                        <a href="#">가맹문의</a><span>/</span>
+                        </li>
+                        <li>
+                        <a href="#">매장찾기</a><span>/</span>
+                        </li>
+                        <li>
+                        <a href="#">채용문의</a><span>/</span>
+                        </li>
+                        <li>
+                        <a href="#">개인정보취급방침</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="fbot">
+                    <div id="flogo">
+                        <h1><a href="#"><img src="img/tarra_logo_2_gray.png" alt=""></a></h1>
+                    </div>
+                    <address>
+                        ㈜세컨드찬스(XOXO HOTDOG&COFFEE) <br>
+대표자 : 서희원 사업자등록번호 : 706-87-00109 <br>
+주소 : 서울특별시 강서구 양천로 583 우림블루나인 비즈니스센터 A동 1510,1511 호 <br>
+대표번호 : 02-2093-2068 팩스번호 : 02-2093-2069
+<br><br>
+Copyright © SECOND CHANCE CORP. All rights reserved.
+                    </address>
+                    <select name="" id="">
+                        <option value="">Family site</option>
+                        <option value="">Family site</option>
+                        <option value="">Family site</option>
+                        <option value="">Family site</option>
+                        <option value="">Family site</option></select>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
