--- a/index.html
+++ b/index.html
@@ -56,13 +56,15 @@
                 <h1><a href="#"><img src="img/tarra_logo_2.png" alt=""></a></h1>
             </div>
             <nav>
-                <div><a href="#">브랜드소개</a>
+                <div class="mmenu"><a href="subpage.html">브랜드소개</a>
+                <div class="micon1"></div>
                 <ul class="sub">
-                    <li><a href="#">타라이야기</a></li>
+                    <li><a href="subpage.html">타라이야기</a></li>
                     <li><a href="#">차 정보</a></li>
                 </ul>
                 </div>
-                <div><a href="#">클래식</a>
+                <div class="mmenu"><a href="#">클래식</a>
+                <div class="micon2"></div>
                 <ul class="sub">
                     <li><a href="#">잉글리시 브렉퍼스트</a></li>
                     <li><a href="#">얼 그레이</a></li>
@@ -71,7 +73,8 @@
                     <li><a href="#">그린티</a></li>
                 </ul>
                 </div>
-                <div><a href="#">프리미엄 블렌딩</a>
+                <div class="mmenu"><a href="#">프리미엄 블렌딩</a>
+                <div class="micon3"></div>
                 <ul class="sub">
                     <li><a href="#">퍼스트 데이트</a></li>
                     <li><a href="#">로맨틱위시</a></li>
@@ -80,7 +83,8 @@
                     <li><a href="#">벨베티 코코</a></li>
                 </ul>
                 </div>
-                <div><a href="#">이벤트</a>
+                <div class="mmenu"><a href="#">이벤트</a>
+                <div class="micon4"></div>
                 <ul class="sub">
                     <li><a href="#">SNS</a></li>
                     <li><a href="#">네이버 포스트</a></li>
